<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#051726"
    tools:context=".CreateAccountActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#81FFD9"
        android:onClick="createc"
        android:text="@string/crate"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword2" />

    <EditText
        android:id="@+id/editTextNumberPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#81FFD9"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="#FDFDFD"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextText5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText5"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#81FFD9"
        android:ems="10"
        android:hint="@string/Id"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:backgroundTint="#81FFD9"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="159dp"
        android:layout_height="166dp"
        android:layout_marginTop="132dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chatbot_high_resolution_logo_color_on_transparent_background"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>